# c_unit_test_play

./: .gitignore  CMakeCache.txt  CMakeCache2.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  greetings.c  greetings.h  main.c  test_greetings.c  untitled7.cbp  utils.c  utils.h
test/: test_greetings.c  test_utils.c
test_app2.dSYM/Contents/: Info.plist
